Changelog
=========

1.2.3 (unreleased)
------------------

* Following jensens change on types whitelist, change the test accordingly.
  [glenfant]

* On alias target removal, the alias layout is reset to "standard". This gives a
  chance to content authors to delete the alias, rather tha saying "Error:
  Layout not found". This fixes #63
  [glenfant]

* Update JavaScript to no longer use reserved function postMessage. This fixes
  #54.
  [dunlapm]

* Update french translation (tiny semantic improvement).
  [kdeldycke]

* Avoid BadRequest error while adding alias_whitelist property in
  upgrade step if this property already exists.  You should usually be
  able to run an upgrade step a second time without fail.
  [maurits]

* Added a useful very reduced 'minimal' view for files.
  [jensens]

* Removed type 'Folder' from Collage properties -> types whitelist. It does not
  make much sense (and will confuse users) to add a folder direct inside a 
  Collage. if someone really needs it, it can be enabled with minor effort.
  [jensens]

* Made Collage fields: show_title, show_description and index_subobjects 
  languageIndependent.
  [jensens]

* Fixed deprecated URL for add on packages (third party content types)
  in the doc.
  [glenfant]

1.2.2 (2009-06-07)
------------------

* A UID can start with numbers. The value of the id attribute cannot start
  with a number by naming convention. The views now use:
  string:title-${view/getUniqueIdentifier}, which always starts with a t
  [jladage]

* Don't render empty descriptions in standard document.
  [jensens]

* In Plone 3 the contributor is the one adding content. So default roles for
  "Add Collage content" is now Contributor, additional to Owner & Manager.

* Don't assume that a view is always available: added error view as fallback.
  It helps a lot in development and doesn't expose ugly tracebacks to users  
  if site has a configuration problem. Also minor cleanup and fixed tests.
  [jensens]
